modification couleur et ajout bouton changement de page

--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,7 +24,7 @@
     <title>Portofoglio Website</title>
     <style>
       * {
-        font-family: 'Lato', sans-serif;
+        font-family: 'Kaisei HarunoUmi', serif;
         margin: 0;
         overflow-x: hidden;
       }
