proBleme zindex contact réglé

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
 
-    <title>Portofoglio Website</title>
+    <title>Portefolio Website</title>
     <style>
       * {
         font-family: 'Kaisei HarunoUmi', serif;
@@ -32,7 +32,7 @@
     </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    
     <div id="root"></div>
   </body>
 </html>
